@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketBulk.pm - to do bulk actions on tickets
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketBulk.pm,v 1.65 2010-09-15 08:18:36 bes Exp $
+# $Id: AgentTicketBulk.pm,v 1.66 2010-10-17 13:48:23 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -19,7 +19,7 @@ use Kernel::System::Priority;
 use Kernel::System::LinkObject;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.65 $) [1];
+$VERSION = qw($Revision: 1.66 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -108,7 +108,7 @@ sub Run {
         # check some stuff
         if (
             ( $Self->{ConfigObject}->Get('Ticket::Frontend::NeedAccountedTime') )
-            && !$GetParam{TimeUnits}
+            && !defined $GetParam{TimeUnits}
             )
         {
             $Error{'TimeUnitsInvalid'} = 'ServerError';
