@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketForward.pm - to forward a message
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketForward.pm,v 1.85 2010-10-13 12:06:36 cg Exp $
+# $Id: AgentTicketForward.pm,v 1.86 2010-10-17 13:48:23 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -23,7 +23,7 @@ use Kernel::System::TemplateGenerator;
 use Mail::Address;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.85 $) [1];
+$VERSION = qw($Revision: 1.86 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -456,7 +456,7 @@ sub SendEmail {
     if (
         $Self->{ConfigObject}->Get('Ticket::Frontend::AccountTime')
         && $Self->{ConfigObject}->Get('Ticket::Frontend::NeedAccountedTime')
-        && !$GetParam{TimeUnits}
+        && !defined $GetParam{TimeUnits}
         )
     {
         $Error{'TimeUnitsInvalid'} = 'ServerError';
