@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketPhone.pm - to handle phone calls
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketPhone.pm,v 1.163 2010-10-13 09:57:24 cg Exp $
+# $Id: AgentTicketPhone.pm,v 1.164 2010-10-17 13:48:23 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -23,7 +23,7 @@ use Kernel::System::LinkObject;
 use Mail::Address;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.163 $) [1];
+$VERSION = qw($Revision: 1.164 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -750,7 +750,7 @@ sub Run {
             }
             if (
                 ( $Self->{ConfigObject}->Get('Ticket::Frontend::NeedAccountedTime') )
-                && !$GetParam{TimeUnits}
+                && !defined $GetParam{TimeUnits}
                 )
             {
                 $Error{'TimeUnitsInvalid'} = ' ServerError';
