@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1463 2010-10-12 16:07:49 cg Exp $
+# $Id: CHANGES,v 1.1464 2010-10-17 13:48:23 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.0.0 beta6 2010-??-??
+ - 2010-10-17 Fixed bug#6109 - '0' is not recognized as a valid input for TimeUnits.
  - 2010-10-12 Fixed bug#6058 - Keyboard shortcuts should be shown via tooltip.
  - 2010-10-12 Added ability to open ticket history and other ticket actions
     in parallel.
